@@ -1,3 +1,4 @@
+1-13-09: refactor HTMLEditorPane hierarchy to support other types of hyperlink behavior
 1-13-09: #1073, replace "Details" button in Privacy Preferences with a hyperlink
 1-13-09: put tracking details in a scrollpane
 1-13-09: #1073, change Privacy tab in Preferences dialog to correspond to specification
